fixed more of the api-docs using swagger autogen
